--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
     background-color: hsl(0, 100%, 74%);
     background-image: url("img/bg-intro-mobile.png");   
     font-family: 'Poppins', sans-serif;
+    padding: 1em;
 }
 
 
@@ -18,8 +19,9 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 80%;
+    max-width: 80%;
     margin: 0 auto;
+    padding-bottom: 2em;
 }
 
 
@@ -35,7 +37,7 @@ body {
 }
 
 .copy-text2 {
-    margin-top: 1.5em;
+    margin-top: 1.5rem;
     text-align: center;
     color:white;
     font-size: 0.8rem;
@@ -45,7 +47,7 @@ body {
 
 .btn1 {
     margin-top: 3rem;
-    padding: 1em 2em;
+    padding: 1em 1em;
     border-radius: 10px;
     /* font-size: 1em; */
     cursor: pointer;
@@ -60,9 +62,10 @@ body {
 .form-fill {
     /* width: 80%; */
     margin: 0 auto;
-    padding: 1em;
+    padding: 1.5em;
     background-color: white;
     margin-top: 1em;
+    border-radius: 10px;
 }
 
 ul {
@@ -72,6 +75,77 @@ ul {
 }
 
 input {
-    margin-bottom: 1em;
-    font-size: 1em;
+    margin-bottom: 1rem;
+    font-size: 1rem;
+    padding: 0.6em;
+    border-radius: 5px;
+    border: 1px solid rgb(231, 225, 225);
 }
+
+input::placeholder {
+    color: black;
+    font-size: 0.7rem;
+}
+
+.btn2 {
+    width: 100%;
+    padding: 1em 1em;
+    background-color: hsl(154, 59%, 51%);
+    color: white;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 0px 3px 5px 1px rgba(10, 1, 1, 0.8);
+}
+
+.tc {
+    font-size: 0.7rem;
+    text-align: center;
+    margin-top: 10px;
+    color: hsl(246, 25%, 77%);
+    font-weight: 600;
+
+}
+
+.red {
+    color: hsl(0, 100%, 74%);
+}
+
+
+/*major breakpoints 600px, 601px, 768px, 992px, 1200px */
+
+@media (min-width: 700px) {
+    #container {
+    display: flex;
+    flex-direction: row;
+
+    }
+
+    .copy-text1 h1 {
+        font-size: 4em;
+        padding-top: 2em;
+        text-align: left;
+
+    }
+
+    .copy-text2 p {
+        font-size: 1.2em;
+        text-align: left;
+    
+}
+
+.btn1 {
+    width: 100%;
+    margin-top: 2rem;
+}
+
+.cta {
+   margin-top: 3rem;
+}
+
+.form-fill input {
+    width: 100%;
+    padding: 1.2em;
+}
+
+}
+
